[gd_scene load_steps=25 format=2]

[ext_resource path="res://Art/coinIcon.png" type="Texture" id=1]
[ext_resource path="res://Art/random_box.png" type="Texture" id=2]
[ext_resource path="res://Scripts/GiftScreen.gd" type="Script" id=3]
[ext_resource path="res://Art/lights3.png" type="Texture" id=4]
[ext_resource path="res://Art/lights2.png" type="Texture" id=5]
[ext_resource path="res://Fonts/Bumpo.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Styles/Buttons/CenterButtons/center_normal.tres" type="StyleBox" id=7]
[ext_resource path="res://Styles/Buttons/CenterButtons/center_pressed.tres" type="StyleBox" id=8]
[ext_resource path="res://Art/rewardAdsBtn.png" type="Texture" id=9]
[ext_resource path="res://Fonts/911Fonts.com_CenturyGothicRegular__-_911fonts.com_fonts_mhpY.ttf" type="DynamicFontData" id=10]

[sub_resource type="ParticlesMaterial" id=1]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
color = Color( 0.996078, 1, 0.00392157, 1 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0.0126582, 0.902273 ), 0.0, 0.881405, 0, 0, Vector2( 0.981013, 0.884091 ), -0.110489, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 3 )
color = Color( 0.996078, 0.854902, 0.219608, 1 )

[sub_resource type="DynamicFont" id=5]
size = 35
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=7]
size = 40
outline_size = 1
outline_color = Color( 0.0666667, 0.427451, 0.156863, 1 )
extra_spacing_top = 9
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 40
outline_size = 1
outline_color = Color( 0.0392157, 0.521569, 0.160784, 1 )
extra_spacing_top = 7
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="DynamicFont" id=13]
size = 30
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=14]
resource_name = "2x_button_scale"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("2XButton:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[node name="GiftScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.509804 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Forward" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -213.0
margin_right = 125.0
margin_bottom = 37.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 292, 426 )
amount = 1
lifetime = 60.0
process_material = SubResource( 1 )
texture = ExtResource( 5 )

[node name="Particles2D2" type="Particles2D" parent="."]
position = Vector2( 291.56, 427.722 )
amount = 1
process_material = SubResource( 4 )
texture = ExtResource( 4 )

[node name="Backward" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.0
margin_top = -213.0
margin_right = 127.0
margin_bottom = 37.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="coin_amount" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -29.0
margin_top = -372.0
margin_right = 64.0
margin_bottom = -336.0
custom_fonts/font = SubResource( 5 )
text = "+100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="coin_amount"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -51.0
margin_top = -22.0
margin_right = -11.0
margin_bottom = 18.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2XButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -294.0
margin_right = 100.0
margin_bottom = -224.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 100, 35 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = SubResource( 7 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="2XButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="2XButton/MarginContainer"]
margin_left = 71.0
margin_top = 11.0
margin_right = 129.0
margin_bottom = 58.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 8 )
text = "2X"
align = 1
valign = 1

[node name="icon" type="TextureRect" parent="2XButton/MarginContainer/Label"]
visible = false
modulate = Color( 0.0392157, 0.521569, 0.160784, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = -25.0
margin_right = -18.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 2
size_flags_vertical = 6
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -106.0
margin_top = -189.0
margin_right = 106.0
margin_bottom = -151.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
text = "No, thanks"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2x_Button_Animation" type="AnimationPlayer" parent="."]
autoplay = "2x_button_scale"
anims/2x_button_scale = SubResource( 14 )

[connection signal="pressed" from="2XButton" to="." method="_on_2XButton_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
